--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 
 
-  <div class="card 2" onclick="redirectTo('Caviar.html')">
+  <div class="card 2" onclick="redirectTo('caviar.html')">
     <img src="images/Caviar.png">
     <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
     <img class="overlay-image-available" src="images/steamicon.png" alt="Overlay Image 1">
@@ -118,7 +118,7 @@
    </div>
 </div>
 
-<div class="card 3" onclick="redirectTo('Caviar.html')">
+<div class="card 3" onclick="redirectTo('caviar.html')">
   <img src="images/RainRunner.png">
   <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
   <img class="overlay-image-available" src="images/steamicon.png" alt="Overlay Image 1">
