Feature : Redid the whole Caviar page.

--- a/baddool.html
+++ b/baddool.html
@@ -37,7 +37,8 @@
                 <div class="smallContainer" opacity>
                     <div class="video" opacity>
                       <iframe width="100%" height="90%" src="https://www.youtube.com/embed/Zt0c8hgHwnQ?si=OmZgZQsH0w7f1f_v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    <div class="text-under-video">
+                    </div>
+                      <div class="text-under-video">
 
                       
                       <div class="box-container">
