--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
             <div class="overlay-text-visible" opacity>
                 <h1 style="color: #39312C; "> Robin Zeitlin</h1> 
                 <p style="color: #39312C; "> Im a Programmer currently studying at FutureGames. Seeking oppurtunities to contribute to game projects, learn new things and gain valueable experience. </p>
-                <h3 style="color: #39312C; "> Languages</h3>
-                <p style="color: #39312C; "> • C#</p>
-                <p style="color: #39312C; "> • C++</p>
-                <p style="color: #39312C; "> • Html</p>
-                <p style="color: #39312C; "> • Css</p>
-                <h3 style="color: #39312C; ">Engines</h3>
-                <p style="color: #39312C; "> • Unity </p>
+                <div class="container">
+                  <div class="box">C#</div>
+                  <div class="box">C++</div>
+                  <div class="box">Unity</div>
+                  <div class="box">Quantum 2</div>
+                  <div class="box">Html</div>
+                  <div class="box">Css</div>
+                </div>
            </div>
         <div class="aboutmetext">
           <p style="color:#0051ff" class="seymour-one-regular"> about me</p>
@@ -118,7 +119,7 @@
    </div>
 </div>
 
-<div class="card 3" onclick="redirectTo('caviar.html')">
+<div class="card 3" onclick="redirectTo('RainRunner.html')">
   <img src="images/RainRunner.png">
   <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
   <img class="overlay-image-available" src="images/steamicon.png" alt="Overlay Image 1">
@@ -127,9 +128,19 @@
        <h2>Colaboration 👥</h2>
        <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
        <p style="text-align:left; padding-left:10px;"> • Steam Leaderboard</p>
- </div>
+  </div>
 </div>
 
+ <div class="card 4" onclick="redirectTo('quantumproject.html')">
+  <img src="images/RainRunner.png">
+  <div class="overlay-text">
+      <h1>Quantum Project</h1> 
+       <h2>Solo 👥</h2>
+       <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
+       <p style="text-align:left; padding-left:10px;"> • To Be Written</p>
+ </div>
+
+</div>
     <div class="card 5">
         <img src="images/pitchBlack.png">
         
