--- a/caviar.html
+++ b/caviar.html
@@ -548,6 +548,18 @@ public bool CloseToFood(Animal animal)
                           </div>-->
                           
                           <div class="my-line"></div>
+                          <p></p>
+                          <div class="box">
+                            <h2 class="oswald-font"; style="color: #E1E1E1" >Goals</h2>
+                            <div class="hidden-text">
+                                <p> 1. Learn AI behaviour such as behaviour trees.</p>
+                                <p> 2. Publish my second steam game.</p>
+                                <p> 3. Publish a game made in a month.</p>
+                                <div class="my-line"></div>
+                                <P> Ive succesfully looked into AI behavior and feel comfortable using it on a more intermediate level, the game will be published on the 16 of april.</P>
+                              </div>
+                            
+                          </div>
 
                         <h2 class="oswald-font"; style="text-align:center">Thank you for reading.</h2>
                     </div>  
