--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   <div class="box">C#</div>
                   <div class="box">C++</div>
                   <div class="box">Unity</div>
-                  <div class="box">Quantum 2</div>
+                  <div class="box">Pun 2</div>
                   <div class="box">Html</div>
                   <div class="box">Css</div>
                 </div>
@@ -81,7 +81,27 @@
 
 <div class="card-container">
 
-    <div class="card 1" onclick="redirectTo('baddool.html')">
+  
+  <div class="card 1" onclick="redirectTo('caviar.html')">
+    <img src="images/Caviar.png">
+    <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
+    <img class="overlay-image-available" src="images/steamicon.png" alt="Overlay Image 1">
+    <div class="overlay-text">
+        <h1>Caviar</h1> 
+         <h2>Solo 👥</h2>
+         <h2>Will be released : 2024-04-15</h2>
+         <p style="padding-left:10px; padding-right:10px;"> Secound steam release, made in 1 month with the goal of learning behaviour trees.</p>
+         <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
+         <p style="text-align:left; padding-left:10px;"> • Steam Integration</p>
+         <p style="text-align:left; padding-left:10px;"> • AI logic</p>
+         <p style="text-align:left; padding-left:10px;"> • Procedural Generation</p>
+         <p style="text-align:left; padding-left:10px;"> • Camera Mechanic</p>
+         <p style="text-align:left; padding-left:10px;"> • Player Movement</p>
+         <p style="text-align:left; padding-left:10px;"> • (everything else)</p>
+   </div>
+</div>
+
+    <div class="card 2" onclick="redirectTo('baddool.html')">
         <img src="images/image1.png">
         <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
         <img class="overlay-image-available" src="images/steamicon.png" alt="Overlay Image 1">
@@ -89,6 +109,7 @@
         <div class="overlay-text">
              <h1>BadDool</h1> 
              <h2>6 👥</h2>
+             <h2>Released to early acess : 2024-02-02</h2>
              <p style="padding-left:10px; padding-right:10px;"> First Steam Release. A 3 month project where I was Programmer and Product Owner. The game succesfully released 2024 Q1 on Steam.</p>
              <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
              <p style="text-align:left; padding-left:10px;"> • Steam Integration + Leaderboard</p>
@@ -100,25 +121,6 @@
         </div>
     </div>
 
-
-
-  <div class="card 2" onclick="redirectTo('caviar.html')">
-    <img src="images/Caviar.png">
-    <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
-    <img class="overlay-image-available" src="images/steamicon.png" alt="Overlay Image 1">
-    <div class="overlay-text">
-        <h1>Caviar</h1> 
-         <h2>Solo (With Colaboration) 👥</h2>
-         <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
-         <p style="text-align:left; padding-left:10px;"> • Steam Integration</p>
-         <p style="text-align:left; padding-left:10px;"> • AI logic</p>
-         <p style="text-align:left; padding-left:10px;"> • Procedural Generation</p>
-         <p style="text-align:left; padding-left:10px;"> • Camera Mechanic</p>
-         <p style="text-align:left; padding-left:10px;"> • Player Movement</p>
-         <p style="text-align:left; padding-left:10px;"> • (everything else)</p>
-   </div>
-</div>
-
 <div class="card 3" onclick="redirectTo('RainRunner.html')">
   <img src="images/RainRunner.png">
   <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
@@ -126,21 +128,12 @@
   <div class="overlay-text">
       <h1>Rain Runner</h1> 
        <h2>Colaboration 👥</h2>
+       <h2>Released : 2024-02-29</h2>
        <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
        <p style="text-align:left; padding-left:10px;"> • Steam Leaderboard</p>
   </div>
 </div>
 
- <div class="card 4" onclick="redirectTo('quantumproject.html')">
-  <img src="images/RainRunner.png">
-  <div class="overlay-text">
-      <h1>Quantum Project</h1> 
-       <h2>Solo 👥</h2>
-       <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
-       <p style="text-align:left; padding-left:10px;"> • To Be Written</p>
- </div>
-
-</div>
     <div class="card 5">
         <img src="images/pitchBlack.png">
         
@@ -151,7 +144,7 @@
        </div>
     </div>
 
-    <div class="bottom-box">
+    
 
     </div>
 
