--- a/rainrunner.html
+++ b/rainrunner.html
@@ -39,16 +39,43 @@
 
                 <div class="smallContainer" opacity>
                     <div class="video" opacity>
-                      <iframe width="100%" height="70%" src="https://www.youtube.com/embed/rxnmJRQE6Mk?si=XByC7Z6yu9EnNU9f" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                      <iframe width="100%" height="70%" src="https://www.youtube.com/embed/G3pbKD8eqEA?si=E-_R5MX-pW1aFLNj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <div class="text-under-video">
 
                       <div style="display: flex;">
                         <h1 style="font-size: 8vh;">Rain Runner Leaderboard.</h1>
                       </div>
 
+                      <div class="box-container">
+                        <div class="box">
+                          <h2 class="oswald-font"; style="color: #E1E1E1" >Goals</h2>
+                            <div class="hidden-text">
+                                <p> 1. Develop my steam integration knowledge.</p>
+                            </div>
+                        </div>
+
+                        <div class="my-line"></div>
+
+                        <div style="display: flex;">
+                          <div style="margin-left: 5px;">
+                            <h3 style="color: #fabf66;">InputDisplay->Tldr</h3>
+                            <p>Using the facepunch API I implemented a functional leaderboard, with friend/global categories.</p>
+                            <h3 style="color: #fabf66;">header</h3>
+                            <p>fill with text fill with textfill with textfill with textfill with textfill with textfill with textfill with textfill with textfill with textfill with textfill with textfill with textfill with textfill with textfill with textfill with textfill with textfill with textfill with text</p>
+                          </div>
+                          <img style="height: 10%; width: 35%; margin: 5%;" src="gifs/RainRunnerShowcase.gif">
+                        </div>
+
+                        <div class="box">
+                          <h2 class="oswald-font"; style="color: #E1E1E1" >Leaderboard | Code</h2>
+                            <div class="hidden-text">
+                                <p> 1. Develop my steam integration knowledge.</p>
+                            </div>
+                        </div>
+
                           <div class="my-line"></div>
 
-                        <h2 class="oswald-font"; style="text-align:center">Thank you for watching.</h2>
+                        <h2 class="oswald-font"; style="text-align:center">Thank you for reading.</h2>
                     </div>  
                     
             </div>
