Added : Rain Runner complete description.

--- a/caviar.html
+++ b/caviar.html
@@ -56,6 +56,7 @@
                       <div class="box-container">
                           <div class="box">
                             <h2 class="oswald-font"; style="color: #E1E1E1" >Dev Diary</h2>
+                            <h2 class="click-this">Click Here</h2>
                             <div class="hidden-text">
                                 <h2 class="oswald-font">Day 1</h2>
                                 <p class="oswald-font">Yesterday I had a strange dream. In this dream, fish swirled around me and it was my job to photograph them. I have just finished my AI course at future games and just published my first steam game. So I am ready to take on something new and exciting. Today I spent time on the basics of the project. I set up the Behaviour Tree, Three of the actions, simple Movement and also due to my previous experience with procedural generation also a procedurally generated ocean floor. I wanna make this AI as scalable and modular as possible.</p>
@@ -161,6 +162,7 @@
                           
                           <div class="box">
                           <h2 class="oswald-font">Boids | Code</h2>
+                          <h2 class="click-this">Click Here</h2>
                           <div class="hidden-text">
                             <div class="code-snippet">
                               <h2 class ="oswald-font">//Cohesion.</h2>
@@ -278,8 +280,8 @@
 
                           <div class="box">
                             <h2 class="oswald-font">Input Display</h2>
+                            <h2 class="click-this">Click Here</h2>
                               <div class="hidden-text">
-                                
                                 <div class="code-snippet">
                                   <pre><code id="codeBlock">
 [CustomEditor(typeof(InputTypeDetector)), CanEditMultipleObjects]
@@ -551,6 +553,7 @@ public bool CloseToFood(Animal animal)
                           <p></p>
                           <div class="box">
                             <h2 class="oswald-font"; style="color: #E1E1E1" >Goals</h2>
+                            <h2 class="click-this">Click Here</h2>
                             <div class="hidden-text">
                                 <p> 1. Learn AI behaviour such as behaviour trees.</p>
                                 <p> 2. Publish my second steam game.</p>
