--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
 </head>
 <body>
 <div>
+
+  <div class="corner-container">
+    <p>Socials</p>
+    <a style="color:#0004ff" href="https://www.linkedin.com/in/robin-zeitlin-778a9127a/">Robin Zeitlin | LinkedIn</a>
+    <p></p>
+    <a style="color:#0004ff"  href="https://github.com/RobinZeitlin?tab=repositories">Robin Zeitlin | Github</a>
+    <p></p>
+    <a style="color:#0004ff"  href="mailto:robin.zeitlin@hotmail.com">robin.zeitlin@hotmail.com</a>
+    <p></p>
+    <a style="color:#0004ff"  href="tel:+4670-835-6431">+4670-835-6431</a>
+  </div>
+  
     <div class="maincard-container" class="hidden">
         <div class="maincard">
         
@@ -143,11 +155,6 @@
              <p> Congrats you reached the end of internet🎉 </p>
        </div>
     </div>
-
-    
-
-    </div>
-
 </div>
 
 
