--- a/caviar.html
+++ b/caviar.html
@@ -25,6 +25,17 @@
 <div>
     <body>
 
+      <div class="corner-container">
+        <p>Socials</p>
+        <a style="color:#0004ff" href="https://www.linkedin.com/in/robin-zeitlin-778a9127a/">Robin Zeitlin | LinkedIn</a>
+        <p></p>
+        <a style="color:#0004ff"  href="https://github.com/RobinZeitlin?tab=repositories">Robin Zeitlin | Github</a>
+        <p></p>
+        <a style="color:#0004ff"  href="mailto:robin.zeitlin@hotmail.com">robin.zeitlin@hotmail.com</a>
+        <p></p>
+        <a style="color:#0004ff"  href="tel:+4670-835-6431">+4670-835-6431</a>
+      </div>
+
         <div class="background-container">
             <img src="images/beige.jpg">
             <img class="moving-image-background" src="images/overlay2.png">
