--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
 <div>
 
   <div class="corner-container">
-    <p>Socials</p>
-    <a style="color:#0004ff" href="https://www.linkedin.com/in/robin-zeitlin-778a9127a/">Robin Zeitlin | LinkedIn</a>
+    <a class="hover-text" href="https://www.linkedin.com/in/robin-zeitlin-778a9127a/">Robin Zeitlin | LinkedIn</a>
     <p></p>
-    <a style="color:#0004ff"  href="https://github.com/RobinZeitlin?tab=repositories">Robin Zeitlin | Github</a>
+    <a class="hover-text" href="https://github.com/RobinZeitlin?tab=repositories">Robin Zeitlin | Github</a>
     <p></p>
-    <a style="color:#0004ff"  href="mailto:robin.zeitlin@hotmail.com">robin.zeitlin@hotmail.com</a>
+    <a class="hover-text" href="mailto:robin.zeitlin@hotmail.com">robin.zeitlin@hotmail.com</a>
     <p></p>
-    <a style="color:#0004ff"  href="tel:+4670-835-6431">+4670-835-6431</a>
+    <a class="hover-text" href="tel:+4670-835-6431">+4670-835-6431</a>
   </div>
+  
   
     <div class="maincard-container" class="hidden">
         <div class="maincard">
