Fix : Changed socials color.

--- a/rainrunner.html
+++ b/rainrunner.html
@@ -26,13 +26,13 @@
     <body>
 
         <div class="corner-container">
-            <a class="hover-text" href="https://www.linkedin.com/in/robin-zeitlin-778a9127a/">Robin Zeitlin | LinkedIn</a>
+            <a class="hover-text" style="color: #6093ff"; href="https://www.linkedin.com/in/robin-zeitlin-778a9127a/">Robin Zeitlin | LinkedIn</a>
             <p></p>
-            <a class="hover-text" href="https://github.com/RobinZeitlin?tab=repositories">Robin Zeitlin | Github</a>
+            <a class="hover-text" style="color: #6093ff"; href="https://github.com/RobinZeitlin?tab=repositories">Robin Zeitlin | Github</a>
             <p></p>
-            <a class="hover-text" href="mailto:robin.zeitlin@hotmail.com">robin.zeitlin@hotmail.com</a>
+            <a class="hover-text" style="color: #6093ff"; href="mailto:robin.zeitlin@hotmail.com">robin.zeitlin@hotmail.com</a>
             <p></p>
-            <a class="hover-text" href="tel:+4670-835-6431">+4670-835-6431</a>
+            <a class="hover-text" style="color: #6093ff"; href="tel:+4670-835-6431">+4670-835-6431</a>
           </div>
 
         <div class="background-container">
