Fix : Changed text on front page.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <img class="moving-image-maincard" src="images/overlay.png">
             <div class="overlay-text-visible" opacity>
                 <h1 style="color: #39312C; "> Robin Zeitlin</h1> 
-                <p style="color: #39312C; "> Im a Programmer currently studying at FutureGames. Seeking oppurtunities to contribute to game projects, learn new things and gain valueable experience. </p>
+                <p style="color: #39312C; "> Game Programmer currently studying at FutureGames. Seeking oppurtunities to contribute to game projects, learn new things and gain valueable experience. </p>
                 <div class="container">
                   <div class="box">C#</div>
                   <div class="box">C++</div>
