Feature : Added Honker and revload to projects.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,20 @@
 
 <div class="card-container">
 
+  <div class="card 1" onclick="redirectTo('revload.html')">
+    <img src="images/Revload/RevloadVerticalCapsule.jpg">
+    <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
+    <img class="overlay-image-available" src="images/steamicon.png" alt="Overlay Image 1">
+    <div class="overlay-text">
+        <h1>Revload</h1> 
+         <h2>Solo 👥</h2>
+         <h2>Will be released : 2024-06-15</h2>
+         <p style="padding-left:10px; padding-right:10px;"> Fourth steam release, made in 1 month with the goal of learning Unitys Entity System.</p>
+         <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
+         <p style="text-align:left; padding-left:10px;"> • The whole game</p>
+    </div>
+  </div>
+
   <div class="card 1" onclick="redirectTo('honker.html')">
     <img src="images/Honker/HonkerVerticalCapsule.png">
     <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
@@ -103,7 +117,9 @@
          <h2>Will be released : 2024-05-15</h2>
          <p style="padding-left:10px; padding-right:10px;"> Third steam release, made in 1 month with the goal of learning Unitys Entity System.</p>
          <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
-         <p style="text-align:left; padding-left:10px;"> • Steam Integration</p>
+         <p style="text-align:left; padding-left:10px;"> • Unity Entity System (DOTS)</p>
+         <p style="text-align:left; padding-left:10px;"> • Editor tool image saver</p>
+         <p style="text-align:left; padding-left:10px;"> • Editor tool goose "Wardrobe"</p>
     </div>
   </div>
 
@@ -114,7 +130,7 @@
     <div class="overlay-text">
         <h1>Caviar</h1> 
          <h2>Solo 👥</h2>
-         <h2>Will be released : 2024-04-15</h2>
+         <h2>Fully released : 2024-04-15</h2>
          <p style="padding-left:10px; padding-right:10px;"> Secound steam release, made in 1 month with the goal of learning behaviour trees.</p>
          <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
          <p style="text-align:left; padding-left:10px;"> • Steam Integration</p>
@@ -125,26 +141,6 @@
          <p style="text-align:left; padding-left:10px;"> • (everything else)</p>
    </div>
 </div>
-
-    <div class="card 2" onclick="redirectTo('baddool.html')">
-        <img src="images/image1.png">
-        <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
-        <img class="overlay-image-available" src="images/steamicon.png" alt="Overlay Image 1">
-
-        <div class="overlay-text">
-             <h1>BadDool</h1> 
-             <h2>6 👥</h2>
-             <h2>Released to early acess : 2024-02-02</h2>
-             <p style="padding-left:10px; padding-right:10px;"> First Steam Release. A 3 month project where I was Programmer and Product Owner. The game succesfully released 2024 Q1 on Steam.</p>
-             <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
-             <p style="text-align:left; padding-left:10px;"> • Steam Integration + Leaderboard</p>
-             <p style="text-align:left; padding-left:10px;"> • Procedural Dungeon Generation</p>
-             <p style="text-align:left; padding-left:10px;"> • Dialogue</p>
-             <p style="text-align:left; padding-left:10px;"> • Interaction</p>
-             <p style="text-align:left; padding-left:10px;"> • NPC/Enemy logic</p> 
-             <p style="text-align:left; padding-left:10px;"> • Player Logic</p>
-        </div>
-    </div>
 
 <div class="card 3" onclick="redirectTo('rainrunner.html')">
   <img src="images/RainRunner.png">
