Feature : changed card layout.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 <div class="card-container">
 
-  <div class="card 1" onclick="redirectTo('revload.html')">
+  <!-- <div class="card 1" onclick="redirectTo('revload.html')">
     <img src="images/Revload/RevloadVerticalCapsule.jpg">
     <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
     <img class="overlay-image-available" src="images/steamicon.png" alt="Overlay Image 1">
@@ -105,10 +105,10 @@
          <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
          <p style="text-align:left; padding-left:10px;"> • The whole game</p>
     </div>
-  </div>
+  </div> -->
 
   <div class="card 1" onclick="redirectTo('honker.html')">
-    <img src="images/Honker/HonkerVerticalCapsule.png">
+    <img src="images/Honker/honkershowcase.png">
     <img class="overlay-image-engine" src="images/unity.png" alt="Overlay Image 1">
     <img class="overlay-image-available" src="images/steamicon.png" alt="Overlay Image 1">
     <div class="overlay-text">
@@ -117,9 +117,7 @@
          <h2>Will be released : 2024-05-15</h2>
          <p style="padding-left:10px; padding-right:10px;"> Third steam release, made in 1 month with the goal of learning Unitys Entity System.</p>
          <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
-         <p style="text-align:left; padding-left:10px;"> • Unity Entity System (DOTS)</p>
-         <p style="text-align:left; padding-left:10px;"> • Editor tool image saver</p>
-         <p style="text-align:left; padding-left:10px;"> • Editor tool goose "Wardrobe"</p>
+         <p style="text-align:left; padding-left:10px;"> • Unity Entity System (DOTS) | • Editor tool image saver | • Editor tool goose "Wardrobe"</p>
     </div>
   </div>
 
@@ -133,12 +131,7 @@
          <h2>Fully released : 2024-04-15</h2>
          <p style="padding-left:10px; padding-right:10px;"> Secound steam release, made in 1 month with the goal of learning behaviour trees.</p>
          <h3 style="text-align:left; padding-left:10px;" > I Programmed : </h3>
-         <p style="text-align:left; padding-left:10px;"> • Steam Integration</p>
-         <p style="text-align:left; padding-left:10px;"> • AI logic</p>
-         <p style="text-align:left; padding-left:10px;"> • Procedural Generation</p>
-         <p style="text-align:left; padding-left:10px;"> • Camera Mechanic</p>
-         <p style="text-align:left; padding-left:10px;"> • Player Movement</p>
-         <p style="text-align:left; padding-left:10px;"> • (everything else)</p>
+         <p style="text-align:left; padding-left:10px;"> • Steam Integration | • AI logic | • Camera Mechanic</p>
    </div>
 </div>
 
